fix: remove z-index in work.css

--- a/css/work.css
+++ b/css/work.css
@@ -16,7 +16,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: 1;
 }
 
 .work__image-eye {
@@ -27,7 +26,6 @@
     width: 40px;
     height: 40px;
     opacity: 0;
-    z-index: 2;
 }
 
 .work__images-wrapper:hover {
